fix text mistake

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 * Set timer countdown in seconds with callback
 */
         $('#countdown-1').timeTo(100, function(){
-            alert('Coubtdown finished');
+            alert('Countdown finished');
         });
 
         var date = getRelativeDate(20);
