add support italian lang

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <li>
 <strong>fontSize</strong>: <em>integer</em> font-size by pixels for digits, default <strong>28</strong>;</li>
 <li>
-<strong>lang</strong>: <em>string</em> language for caption, available 'en', 'ru', 'ua', 'de', 'fr', 'sp', default <strong>'en'</strong>;</li>
+<strong>lang</strong>: <em>string</em> language for caption, available 'en', 'ru', 'ua', 'de', 'fr', 'sp', 'it', default <strong>'en'</strong>;</li>
 <li>
 <strong>seconds</strong>: <em>integer</em> initial time in seconds for countdown timer, default <strong>0</strong>;</li>
 <li>
@@ -160,7 +160,7 @@
 * Set timer countdown in seconds with callback
 */
         $('#countdown-1').timeTo(100, function(){
-            alert('Countdown finished');
+            alert('Coubtdown finished');
         });
 
         var date = getRelativeDate(20);
