change option displayDays to integer means count of display days digits

--- a/example.html
+++ b/example.html
@@ -41,6 +41,7 @@ $('#countdown').timeTo(new Date('<span id="date-str"></span>')); </pre>
     <pre>
 $('#countdown').timeTo({
     timeTo: new Date(new Date('<span id="date2-str"></span>')),
+    displayDays: 2,
     theme: "black",
     displayCaptions: true,
     fontSize: 48,
@@ -84,6 +85,7 @@ $('#clock-1').timeTo();</pre>
          */
         $('#countdown-3').timeTo({
             timeTo: date,
+            displayDays: 2,
             theme: "black",
             displayCaptions: true,
             fontSize: 48,
