--- a/example.html
+++ b/example.html
@@ -69,7 +69,7 @@ $('#clock-1').timeTo();</pre>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="jquery-1.9.1.min.js"><\/script>')</script>
-    <script src="jquery.timeTo.js"></script>
+    <script src="jquery.timeTo.min.js"></script>
     <script>
         /**
          * Set timer countdown in seconds with callback
