update test page

--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
         popup.popup("open");
         popup.popup("option", "positionTo", "window" );
         console.log("timout: "+timeout);
-        $('#countdown').timeTo();
+        $('#countdown').timeTo({ seconds: timeout });
       }
     </script>
   </head>
