--- a/example.html
+++ b/example.html
@@ -30,6 +30,10 @@
 $('#countdown').timeTo(100, function(){ alert('Countdown finished'); }); </pre>
 
     <div id="countdown-1"></div>
+    <p><button id="reset-1" type="button">Reset</button></p>
+
+    <div class="clock"></div>
+    <div class="clock"></div>
 
     <h3>Hide hours</h3>
     <pre>
@@ -67,16 +71,21 @@ $('#clock-1').timeTo();</pre>
 
     <div id="clock-1"></div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="jquery-1.9.1.min.js"><\/script>')</script>
-    <script src="jquery.timeTo.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="jquery.timeTo.js"></script>
     <script>
         /**
          * Set timer countdown in seconds with callback
          */
-        $('#countdown-1').timeTo(100, function(){
+        $('#countdown-1').timeTo(1000, function(){
             alert('Countdown finished');
         });
+        $('#reset-1').click(function() {
+            $('#countdown-1').timeTo('reset');
+        });
+
+        // $('.clock').timeTo();
 
         /**
          * Hide hours
