--- a/example.html
+++ b/example.html
@@ -71,9 +71,9 @@ $('#clock-1').timeTo();</pre>
 
     <div id="clock-1"></div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="jquery-1.11.2.min.js"><\/script>')</script>
-    <script src="jquery.timeTo.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="node_modules/jquery/dist/jquery.min.js"><\/script>')</script>
+    <script src="jquery.time-to.js"></script>
     <script>
         /**
          * Set timer countdown in seconds with callback
